Adding Parse to the quickstart

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>React Parse</title>
+    <link rel="icon" href="img/back4app-icon.ico">
+    <script src="https://unpkg.com/parse/dist/parse.min.js"></script>
 </head>
 <body>
     <div id="app"></div>
