Adding funtionalits to signup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <title>React Parse</title>
     <link rel="icon" href="img/back4app-icon.ico">
+
+    <!--Parse SDK-->
     <script src="https://unpkg.com/parse/dist/parse.min.js"></script>
+
+    <!-- Bootstrap core CSS -->
+    <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet">
+
+    <!--Including css-->
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
 <body>
     <div id="app"></div>
