--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="app"></div>
 
-    <script src="build/js/vendor.js"></script>
-    <script src="build/js/bundle.js"></script>
+    <script src="build/vendor.js"></script>
+    <script src="build/bundle.js"></script>
 </body>
 </html>
